[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "metacast"
version = "0.0.1"
dependencies = [
    "numpy>=1.26.3",
    "pandas>=2.1.4",
    "scipy>=1.11.4",
    "pingouin>=0.5.4",
    "tqdm>=4.66.1",
    "dask>=2024.2.1"
]
authors = [
  {name="Martin Grunnill", email="m.d.grunnill@gmail.com"},
]
maintainers = [
  { name="Martin Grunnill", email="m.d.grunnill@gmail.com"},
]
description = "A package for broadcasting epidemiological and ecological models over meta-populations."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    'Development Status :: 1 - Planning',
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
license = {file = "LICENSE"}

[project.urls]
Homepage = "https://github.com/m-d-grunnill/MetaCast"
Repository = "https://github.com/m-d-grunnill/MetaCast"
Issues = "https://github.com/m-d-grunnill/MetaCast/issues"