[build-system]
requires = [
    "setuptools >= 61.0",
    "wheel >= 0.38"
]
build-backend = "setuptools.build_meta"

[project]
name = "metacast"
version = "0.1.4"
dependencies = [
    "numpy >= 1.26.3",
    "pandas >= 2.1.4",
    "scipy >= 1.11.4",
    "pingouin >= 0.5.4",
    "tqdm >= 4.66.1",
    "dask >= 2024.2.1",
    "distributed >= 2024.2.1",
    'bokeh >= 3.3.4',
    'seaborn >= 0.13.2',
    'jupyter >= 1.0.0'
]
authors = [
  {name="Martin Grunnill", email="m.d.grunnill@gmail.com"},
]
maintainers = [
  { name="Martin Grunnill", email="m.d.grunnill@gmail.com"},
]
description = "A package for broadcasting epidemiological and ecological models over meta-populations."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    'Development Status :: 4 - Beta',
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Natural Language :: English",
    "Topic :: Scientific/Engineering",
    "Intended Audience :: Science/Research",
]
# keywords should contain search terms so users can
# find our project
keywords = [
    "Epimediology",
    "Ecology",
    "Virology",
    "Compartmental",
    "Model",
    'Metapopulations',
    'Structured Populations',
    'Discrete Event',
    'Sensitivity Analyses',
    'Latin Hypercube Sampling',
    'Scenario Analysis'
]


license = {file = "LICENSE"}

[project.urls]
Homepage = "https://github.com/m-d-grunnill/MetaCast"
Repository = "https://github.com/m-d-grunnill/MetaCast"
Issues = "https://github.com/m-d-grunnill/MetaCast/issues"
Documentaion = "https://metacast.readthedocs.io/en/latest/index.html"